@@ -158,7 +158,7 @@
 			<label index="tx_seminars_attendances.notes">Additional notes:</label>
 			<label index="tx_seminars_attendances.registered_themselves">Has signed up themselves:</label>
 			<label index="tx_seminars_attendances.seats">Number of seats:</label>
-			<label index="tx_seminars_attendances.attendees_names">Additional attendees:</label>
+			<label index="tx_seminars_attendances.attendees_names">Additional registered persons:</label>
 			<label index="tx_seminars_attendances.additional_persons">Additional registered persons:</label>
 			<label index="tx_seminars_attendances.kids">Number of kids:</label>
 			<label index="tx_seminars_sites">Seminar Sites</label>
@@ -1414,7 +1414,7 @@
 			<label index="tx_seminars_attendances.notes" type="integer">67236517</label>
 			<label index="tx_seminars_attendances.registered_themselves" type="integer">104863324</label>
 			<label index="tx_seminars_attendances.seats" type="integer">134941724</label>
-			<label index="tx_seminars_attendances.attendees_names" type="integer">198880077</label>
+			<label index="tx_seminars_attendances.attendees_names" type="integer">112409617</label>
 			<label index="tx_seminars_attendances.additional_persons" type="integer">112409617</label>
 			<label index="tx_seminars_attendances.kids" type="integer">7953511</label>
 			<label index="tx_seminars_sites" type="integer">79939835</label>
@@ -2443,7 +2443,7 @@
 			<label index="tx_seminars_attendances.notes">Additional notes:</label>
 			<label index="tx_seminars_attendances.registered_themselves">Has signed up themselves:</label>
 			<label index="tx_seminars_attendances.seats">Number of seats:</label>
-			<label index="tx_seminars_attendances.attendees_names">Additional attendees:</label>
+			<label index="tx_seminars_attendances.attendees_names">Additional registered persons:</label>
 			<label index="tx_seminars_attendances.additional_persons">Additional registered persons:</label>
 			<label index="tx_seminars_attendances.kids">Number of kids:</label>
 			<label index="tx_seminars_sites">Seminar Sites</label>
